<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/action_add_beacon"
        android:textColor="@color/white_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/tv_uuid"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:labelFor="@+id/edit_uuid_part1"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/beacon_label_uuid"
        android:textColor="@color/white_text"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_uuid_part1"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@+id/tv_uuid"
        android:background="@drawable/callout_edittext_bg"
        android:digits="0123456789ABCDEF"
        android:inputType="textCapCharacters"
        android:maxLength="8"
        android:text="@string/beacon_uuid_part1"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_uuid_part_separator1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_toRightOf="@+id/edit_uuid_part1"
        android:labelFor="@+id/edit_uuid_part2"
        android:padding="3dp"
        android:text="@string/beacon_uuid_separator"
        android:textColor="@color/white_text"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_uuid_part2"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_toRightOf="@+id/tv_uuid_part_separator1"
        android:background="@drawable/callout_edittext_bg"
        android:digits="0123456789ABCDEF"
        android:inputType="textCapCharacters"
        android:maxLength="4"
        android:text="@string/beacon_uuid_part2"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_uuid_part_separator2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_toRightOf="@+id/edit_uuid_part2"
        android:labelFor="@+id/edit_uuid_part3"
        android:padding="3dp"
        android:text="@string/beacon_uuid_separator"
        android:textColor="@color/white_text"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_uuid_part3"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_toRightOf="@+id/tv_uuid_part_separator2"
        android:background="@drawable/callout_edittext_bg"
        android:digits="0123456789ABCDEF"
        android:inputType="textCapCharacters"
        android:maxLength="4"
        android:text="@string/beacon_uuid_part3"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_uuid_part_separator3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_uuid_part1"
        android:layout_below="@id/tv_uuid"
        android:layout_marginTop="1dp"
        android:labelFor="@+id/edit_uuid_part4"
        android:padding="3dp"
        android:text="@string/beacon_uuid_separator"
        android:textColor="@color/white_text"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_uuid_part4"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_uuid"
        android:layout_marginTop="1dp"
        android:layout_toRightOf="@+id/tv_uuid_part_separator3"
        android:background="@drawable/callout_edittext_bg"
        android:digits="0123456789ABCDEF"
        android:inputType="textCapCharacters"
        android:maxLength="4"
        android:text="@string/beacon_uuid_part4"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_uuid_part_separator4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_uuid"
        android:layout_marginTop="1dp"
        android:layout_toRightOf="@+id/edit_uuid_part4"
        android:labelFor="@+id/edit_uuid_part5"
        android:padding="3dp"
        android:text="@string/beacon_uuid_separator"
        android:textColor="@color/white_text"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_uuid_part5"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_uuid"
        android:layout_marginTop="1dp"
        android:layout_toRightOf="@+id/tv_uuid_part_separator4"
        android:background="@drawable/callout_edittext_bg"
        android:digits="0123456789ABCDEF"
        android:inputType="textCapCharacters"
        android:maxLength="12"
        android:text="@string/beacon_uuid_part5"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_major"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_uuid_part_separator3"
        android:layout_marginTop="3dp"
        android:labelFor="@+id/edit_major"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/beacon_label_major"
        android:textColor="@color/white_text"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_major"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_uuid_part_separator3"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/tv_major"
        android:background="@drawable/callout_edittext_bg"
        android:digits="0123456789ABCDEF"
        android:inputType="textCapCharacters"
        android:maxLength="4"
        android:text="@string/beacon_major"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_minor"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_uuid_part_separator3"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/edit_major"
        android:labelFor="@+id/edit_minor"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/beacon_label_minor"
        android:textColor="@color/white_text"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_minor"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_uuid_part_separator3"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/tv_minor"
        android:background="@drawable/callout_edittext_bg"
        android:digits="0123456789ABCDEF"
        android:inputType="textCapCharacters"
        android:maxLength="4"
        android:text="@string/beacon_minor"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="108dp"
        android:layout_height="36dp"
        android:layout_below="@+id/tv_major"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:background="@drawable/btn_possitive"
        android:text="@string/confirm" />

</RelativeLayout>