<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333"
    android:orientation="vertical"
    android:padding="6dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/action_check_in"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#3dd" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#3aa" />

    <RadioGroup
        android:id="@+id/rg_select_in_or_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp" >

        <RadioButton
            android:id="@+id/rb_check_in"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@drawable/check_in"
            android:checked="true"
            android:gravity="center"
            android:layout_marginRight="8dp"
            android:text="@string/check_in"
            android:textColor="#eee" />

        <RadioButton
            android:id="@+id/rb_check_out"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:button="@drawable/check_out"
            android:gravity="center"
            android:text="@string/check_out"
            android:textColor="#eee" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="3dp" >

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_possitive"
            android:checked="true"
            android:text="@string/confirm"
            android:textColor="#111" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_possitive"
            android:text="@string/cancel"
            android:textColor="#111" />
    </LinearLayout>

</LinearLayout>