<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray_bk"
    android:orientation="vertical"
    android:padding="6dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_select_method"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="8dp"
        android:background="@color/bright_blue" />

    <RadioGroup
        android:id="@+id/rg_select_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_find_desk"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@drawable/find_office_desk"
            android:checked="true"
            android:text="@string/find_office_desk"
            android:textColor="@color/white_text" />

        <RadioButton
            android:id="@+id/rb_leave_msg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@drawable/leave_msg"
            android:text="@string/leave_msg"
            android:textColor="@color/white_text" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:padding="3dp" >

        <Button
            android:id="@+id/btn_confirm"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_possitive"
            android:checked="true"
            android:text="@string/confirm"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_text" />

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_possitive"
            android:text="@string/cancel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black_text" />
    </LinearLayout>

</LinearLayout>